# poc-samples

sigurd/: Cargo.toml  Config.toml
sigurd/src/: main.rs
sigurd/src/cli/: log.rs  mod.rs  tui.rs
sigurd/src/drivers/: mod.rs
sigurd/src/drivers/bdapiutil64/: mod.rs
sigurd/src/drivers/k7rkscan/: mod.rs
sigurd/src/drivers/ksapi64/: mod.rs
sigurd/src/drivers/throttlestop/: mod.rs  offsets.rs  types.rs
sigurd/src/drivers/wsftprm/: mod.rs
sigurd/src/killer/: mod.rs  process.rs
sigurd/src/utils/: config.rs  error.rs  fs.rs  mod.rs  service.rs
