[package]
name = "sigurd"
version = "0.1.0"
edition = "2024"
authors = ["I3r1h0n"]
description = "BYOVD technique abuse tool"

[profile.release]
opt-level = "z"  
lto = true          
codegen-units = 1
strip = true      

[dependencies]
chrono = "0.4"
console = "0.16.2"
crossterm = "0.29.0"
rand = "0.9.2"
terminal_size = "0.4.3"
toml = "0.9.10"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
winapi = { version = "0.3.9", features = [
    "winnt",
    "winsvc", 
    "winbase",
    "fileapi",
    "handleapi",
    "ioapiset",
    "processenv",
    "tlhelp32",
    "errhandlingapi",
    "securitybaseapi",
    "winreg"
]}
ctrlc = "3.5.1"
ntapi = "0.4.2"
superfetch = "0.1.1"

[features]
default = [
    "trace", 
    "wsftprm",
    "throttlestop", 
    "k7rkscan",
    "bdapiutil64"
]
trace = []
bdapiutil64 = []
k7rkscan = []
throttlestop = []
ksapi64 = []
wsftprm = []
